@@ -28,6 +28,7 @@ import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyVetoException;
 import java.beans.VetoableChangeListener;
+import java.lang.reflect.InvocationTargetException;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Enumeration;
@@ -89,6 +90,7 @@ import jmri.jmrit.roster.RosterEntry;
 import jmri.jmrit.roster.swing.RosterEntrySelectorPanel;
 import jmri.util.DnDStringImportHandler;
 import jmri.util.JmriJFrame;
+import jmri.util.swing.JmriColorChooser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -219,7 +221,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     // map of icon editor frames (incl, icon editor) keyed by name
     protected HashMap<String, JFrameItem> _iconEditorFrame = new HashMap<>();
 
-    private static volatile ArrayList<Editor> editors = new ArrayList<>();
     // store panelMenu state so preference is retained on headless systems
     private boolean panelMenuIsVisible = true;
 
@@ -237,11 +238,19 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         InstanceManager.sensorManagerInstance().addVetoableChangeListener(this);
         InstanceManager.memoryManagerInstance().addVetoableChangeListener(this);
         InstanceManager.getDefault(BlockManager.class).addVetoableChangeListener(this);
-        editors.add(this);
+        InstanceManager.getDefault(EditorManager.class).addEditor(this);
     }
 
     public Editor(String name) {
         this(name, true, true);
+    }
+
+    /**
+     * Set <strong>white</strong> as the default background color for panels created using the <strong>New Panel</strong> menu item.
+     * Overriden by LE to use a different default background color and set other initial defaults.
+     */
+    public void newPanelDefaults() {
+        setBackgroundColor(Color.WHITE);
     }
 
     public void loadFailed() {
@@ -255,6 +264,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     public NamedIcon loadFailed(String msg, String url) {
         log.debug("loadFailed _ignore= {} {}", _ignore, msg);
+        if (_urlMap == null) {
+            _urlMap = new HashMap<>();
+        }
         String goodUrl = _urlMap.get(url);
         if (goodUrl != null) {
             return NamedIcon.getIconByName(goodUrl);
@@ -277,7 +289,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return _newIcon;
     }
 
-    class UrlErrorDialog extends JDialog {
+    public class UrlErrorDialog extends JDialog {
 
         JTextField _urlField;
         CatalogPanel _catalog;
@@ -464,6 +476,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     public void setBackgroundColor(Color col) {
         TargetPane tmp = (TargetPane) _targetPanel;
         tmp.setBackgroundColor(col);
+        JmriColorChooser.addRecentColor(col);
     }
 
     public void clearBackgroundColor() {
@@ -542,8 +555,8 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     }
 
     /**
-     * Special internal class to allow drawing of layout to a JLayeredPane This
-     * is the 'target' pane where the layout is displayed
+     * Special internal class to allow drawing of layout to a JLayeredPane. This
+     * is the 'target' pane where the layout is displayed.
      */
     public class TargetPane extends JLayeredPane {
 
@@ -599,7 +612,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             int hnew = Math.max(h, c.getLocation().y + c.getSize().height);
             int wnew = Math.max(w, c.getLocation().x + c.getSize().width);
             if (hnew > h || wnew > w) {
-//                log.debug("adding of {} with Object - i=", c.getSize(), o);
+                // log.debug("adding of {} with Object - i=", c.getSize(), o);
                 setSize(wnew, hnew);
             }
         }
@@ -640,9 +653,15 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 g2d.scale(_paintScale, _paintScale);
             }
 
-            super.paint(g);
-            paintTargetPanel(g);
-
+            // It is rather unpleasant that the following needs to be done in a try-catch, but exceptions have been observed
+            try {
+               super.paint(g);
+               paintTargetPanel(g);
+            } catch (Exception e) {
+                log.error("paint failed in thread "+
+                    Thread.currentThread().getName()+" "+Thread.currentThread().getId()+": ", e);
+            }
+            
             Stroke stroke = new BasicStroke();
             if (g2d != null) {
                 stroke = g2d.getStroke();
@@ -691,6 +710,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         public void setBackgroundColor(Color col) {
             setBackground(col);
             setOpaque(true);
+            JmriColorChooser.addRecentColor(col);
         }
 
         public void clearBackgroundColor() {
@@ -747,7 +767,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         }
     }
 
-    protected void deselectSelectionGroup() {
+    public void deselectSelectionGroup() {
         if (_selectionGroup == null) {
             return;
         }
@@ -917,18 +937,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      return _showCoordinates;
      }
      */
-    /**
-     * Control whether target panel shows a menu
-     *
-     * @param state true for controlling.
-     * @deprecated 3.9.5
-     * @see #setPanelMenuVisible(boolean)
-     */
-    @Deprecated
-    public void setPanelMenu(boolean state) {
-        _targetFrame.getJMenuBar().setVisible(state);
-        validate();
-    }
 
     /**
      * Hide or show menus on the target panel.
@@ -1059,7 +1067,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                         break;
                     case 1:
                         if (deletePanel()) { // disposes everything
-                            dispose(true);
+                            dispose();
                         }
                         break;
                     case 2:
@@ -1085,12 +1093,13 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         JFrame frame = getTargetFrame();
 
         try {
-            Editor ed = (Editor) Class.forName(className).newInstance();
+            Editor ed = (Editor) Class.forName(className).getDeclaredConstructor().newInstance();
 
             ed.setName(getName());
             ed.init(getName());
 
-            ed._contents = _contents;
+            ed._contents = new ArrayList<>(_contents);
+
             for (Positionable p : _contents) {
                 p.setEditor(ed);
                 ed.addToTarget(p);
@@ -1114,14 +1123,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 //            ed.pack();
             ed.setVisible(true);
             InstanceManager.getDefault(PanelMenu.class).addEditorPanel(ed);
-            dispose(false);
+            dispose();
             return ed;
-        } catch (ClassNotFoundException cnfe) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException cnfe) {
             log.error("changeView exception {}", cnfe.toString());
-        } catch (InstantiationException ie) {
-            log.error("changeView exception {}", ie.toString());
-        } catch (IllegalAccessException iae) {
-            log.error("changeView exception {}", iae.toString());
         }
         return null;
     }
@@ -2636,9 +2641,20 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      *
      * @param clear true to discard Positionables; false to retain Positionables
      *              for future use
+     * @deprecated since 4.11.5. use {@link #dispose()} instead.
      */
+    @Deprecated // 4.11.5
     public void dispose(boolean clear) {
         log.debug("Editor delete and dispose done. clear= {}", clear);
+        jmri.util.Log4JUtil.deprecationWarning(log, "dispose(boolean )");        
+        dispose();
+    }
+
+    /**
+     * Dispose of the editor.
+     */
+    @Override
+    public void dispose() {
         Iterator<JFrameItem> iter = _iconEditorFrame.values().iterator();
         while (iter.hasNext()) {
             JFrameItem frame = iter.next();
@@ -2651,13 +2667,11 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             cm.deregister(this);
         }
         InstanceManager.getDefault(PanelMenu.class).deletePanel(this);
-        Editor.editors.remove(this);
+        InstanceManager.getDefault(EditorManager.class).removeEditor(this);
         setVisible(false);
-        if (clear) {
-            _contents.clear();
-        }
+        _contents.clear();
         removeAll();
-        this.dispose();
+        super.dispose();
     }
 
     /*
@@ -2817,7 +2831,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 double rad = p.getDegrees() * Math.PI / 180.0;
                 java.awt.geom.AffineTransform t = java.awt.geom.AffineTransform.getRotateInstance(-rad);
                 double[] pt = new double[2];
-                // bit shift to avoid Findbugs paranoia
+                // bit shift to avoid SpotBugs paranoia
                 pt[0] = x - rect.x - (rect.width >>> 1);
                 pt[1] = y - rect.y - (rect.height >>> 1);
                 t.transform(pt, 0, pt, 0, 1);
@@ -2926,11 +2940,11 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 (new TextAttrDialog(comp)).setVisible(true);
             }
 
-            AbstractAction init(Positionable pos) {
+            AbstractAction init(Positionable pos, Editor e) { // e unused?
                 comp = pos;
                 return this;
             }
-        }.init(p));
+        }.init(p, this));
         return true;
     }
 
@@ -2944,13 +2958,17 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             _pos = p;
             JPanel panel = new JPanel();
             panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
-            _decorator = new DecoratorPanel(_pos.getEditor(), this);
+            _decorator = new DecoratorPanel(_pos.getEditor(), null);
             _decorator.initDecoratorPanel(_pos);
             panel.add(_decorator);
             panel.add(makeDoneButtonPanel());
-            setContentPane(panel);
+            Dimension dim = panel.getPreferredSize();
+            JScrollPane sp = new JScrollPane(panel);
+            dim = new Dimension(dim.width +10, dim.height + 10);
+            sp.setPreferredSize(dim);
+            setContentPane(sp);
+            setLocation(jmri.util.PlaceWindow.nextTo(_pos.getEditor(), (Component)_pos, this));
             pack();
-            setLocationRelativeTo((Component) _pos);
         }
 
         protected JPanel makeDoneButtonPanel() {
@@ -2961,13 +2979,14 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 @Override
                 public void actionPerformed(ActionEvent a) {
                     PositionablePopupUtil util = _decorator.getPositionablePopupUtil();
+                    _decorator.setSuppressRecentColor(false);
                     _decorator.setAttributes(_pos);
                     if (_selectionGroup == null) {
                         setAttributes(util, _pos);
                     } else {
                         setSelectionsAttributes(util, _pos);
                     }
-                    dispose();
+                   dispose();
                 }
             });
             panel0.add(doneButton);
@@ -2976,6 +2995,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             cancelButton.addActionListener(new ActionListener() {
                 @Override
                 public void actionPerformed(ActionEvent a) {
+                    _decorator.setSuppressRecentColor(false);
                     dispose();
                 }
             });
@@ -2991,7 +3011,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * @param p       the item to set attributes of
      *
      */
-    protected void setAttributes(PositionablePopupUtil newUtil, Positionable p) {
+    public void setAttributes(PositionablePopupUtil newUtil, Positionable p) {
         p.setPopupUtility(newUtil.clone(p, p.getTextComponent()));
         int mar = newUtil.getMargin();
         int bor = newUtil.getBorderSize();
@@ -3007,12 +3027,13 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         } else {
             borderMargin = BorderFactory.createEmptyBorder(mar, mar, mar, mar);
         }
+        p.setBorder(new CompoundBorder(outlineBorder, borderMargin));
+
         if (p instanceof PositionableLabel) {
             PositionableLabel pos = (PositionableLabel) p;
             if (pos.isText()) {
                 int deg = pos.getDegrees();
                 pos.rotate(0);
-                pos.setBorder(new CompoundBorder(outlineBorder, borderMargin));
                 if (deg == 0) {
                     p.setOpaque(newUtil.hasBackground());
                 } else {
@@ -3022,7 +3043,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         } else if (p instanceof PositionableJPanel) {
             p.setOpaque(newUtil.hasBackground());
             p.getTextComponent().setOpaque(newUtil.hasBackground());
-            p.setBorder(new CompoundBorder(outlineBorder, borderMargin));
         }
         p.updateSize();
         p.repaint();
@@ -3321,11 +3341,14 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * Get a List of the currently-existing Editor objects. The returned list is
      * a copy made at the time of the call, so it can be manipulated as needed
      * by the caller.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditorsList()}
      *
      * @return a List of Editors
+     * @see jmri.jmrit.display.EditorManager#getEditorsList()
      */
     synchronized public static List<Editor> getEditors() {
-        return new ArrayList<>(editors);
+        return InstanceManager.getDefault(EditorManager.class).getEditorsList();
     }
 
     /**
@@ -3334,36 +3357,30 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * <p>
      * The returned list is a copy made at the time of the call, so it can be
      * manipulated as needed by the caller.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditorsList(Class)}
      *
      * @param <T>  the Class the list should be limited to.
      * @param type the Class the list should be limited to.
      * @return a List of Editors.
+     * @see jmri.jmrit.display.EditorManager#getEditorsList(Class)
      */
-    @SuppressWarnings("unchecked")
     synchronized public static <T extends Editor> List<T> getEditors(@Nonnull Class<T> type) {
-        List<T> result = new ArrayList<>();
-        for (Editor e : Editor.getEditors()) {
-            if (type.isInstance(e)) {
-                result.add((T) e);
-            }
-        }
-        return result;
+        return InstanceManager.getDefault(EditorManager.class).getEditorsList(type);
     }
 
     /**
      * Get an Editor of a particular name. If more than one exists, there's no
      * guarantee as to which is returned.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditor(String)}
      *
      * @param name the editor to get
      * @return an Editor or null if no matching Editor could be found
+     * @see jmri.jmrit.display.EditorManager#getEditor(String)
      */
     public static Editor getEditor(String name) {
-        for (Editor e : Editor.getEditors()) {
-            if (e.getTitle().equals(name)) {
-                return e;
-            }
-        }
-        return null;
+        return InstanceManager.getDefault(EditorManager.class).getEditor(name);
     }
 
     // initialize logging
