@@ -2,6 +2,7 @@ package jmri.jmrix;
 
 import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.ResourceBundle;
 import javax.swing.BorderFactory;
@@ -19,19 +20,18 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Provide GUI to configure communications links.
- * <P>
+ * <p>
  * This is really just a catalog of connections to classes within the systems.
  * Reflection is used to reduce coupling at load time.
- * <P>
+ * <p>
  * Objects of this class are based on an underlying ConnectionConfig
  * implementation, which in turn is obtained from the InstanceManager. Those
  * must be created at load time by the ConfigXml process, or in some Application
  * class.
- * <P>
+ * <p>
  * The classes referenced are the specific subclasses of
  * {@link jmri.jmrix.ConnectionConfig} which provides the methods providing data
  * to the configuration GUI, and responding to its changes.
- * <p>
  *
  * @author Bob Jacobsen Copyright (C) 2001, 2003, 2004, 2010
  */
@@ -43,36 +43,6 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
     public static final String NONE = Bundle.getMessage("none");
     // initialize logging
     private final static Logger log = LoggerFactory.getLogger(JmrixConfigPane.class);
-
-    /**
-     * Get access to a pane describing existing configuration information, or
-     * create one if needed.
-     * <P>
-     * The index argument is used to connect the new pane to the right
-     * communications info. A value of "1" means the first (primary) port, 2 is
-     * the second, etc.
-     *
-     * @param index 1-N based index of the communications object to configure.
-     * @return a configuration panel for the specified communications object.
-     * @deprecated since 4.5.7; use {@link #createPanel(int)} to get a new panel
-     * instead.
-     */
-    @Deprecated
-    public static JmrixConfigPane instance(int index) {
-        return createPanel(index);
-    }
-
-    /**
-     * Not in use within JMRI.
-     *
-     * @param config the configuration for which a pane is desired
-     * @return an existing configuration pane or null
-     * @deprecated as of 4.5.7
-     */
-    @Deprecated
-    public static JmrixConfigPane instance(ConnectionConfig config) {
-        return createPanel(config);
-    }
 
     /*
      * Create panel is seperated off from the instance and synchronized, so that only
@@ -122,31 +92,6 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
     }
 
     /**
-     * Returns 0 since this class no longer maintains a collection of
-     * JmrixConfigPane instances.
-     *
-     * @return 0
-     * @deprecated since 4.5.7; use
-     * {@link jmri.jmrix.ConnectionConfigManager#getConnections()} to get the
-     * collection of connection configurations and use that size.
-     */
-    @Deprecated
-    public static int getNumberOfInstances() {
-        return 0;
-    }
-
-    /**
-     * Does nothing.
-     *
-     * @param index index of pane
-     * @deprecated since 4.5.7; dispose of any held panes by calling
-     * {@link #dispose(jmri.jmrix.JmrixConfigPane)}
-     */
-    @Deprecated
-    public static void dispose(int index) {
-    }
-
-    /**
      * Disposes of the underlying connection for a configuration pane.
      *
      * @param confPane the pane to dispose of
@@ -161,7 +106,7 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
             try {
                 confPane.ccCurrent.dispose();
             } catch (RuntimeException ex) {
-                log.error("Error Occured while disposing connection {}", ex.toString());
+                log.error("Error Occurred while disposing connection {}", ex.toString());
             }
         }
         ConfigureManager cmOD = InstanceManager.getNullableDefault(jmri.ConfigureManager.class);
@@ -172,31 +117,6 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         InstanceManager.getDefault(ConnectionConfigManager.class).remove(confPane.ccCurrent);
     }
 
-    /**
-     * Returns -1 since a centralized collection of JmrixConfigPanes is not
-     * maintained.
-     *
-     * @param confPane the pane
-     * @return -1
-     * @deprecated since 4.5.7 without direct replacement.
-     */
-    @Deprecated
-    public static int getInstanceNumber(JmrixConfigPane confPane) {
-        return -1;
-    }
-
-    /**
-     * Does nothing useful.
-     *
-     * @return an empty list
-     * @deprecated since 4.5.7; use
-     * {@link jmri.jmrix.ConnectionConfigManager#getConnections()} to get a list
-     * of connections
-     */
-    @Deprecated
-    public static ArrayList<JmrixConfigPane> getListOfConfigPanes() {
-        return new ArrayList<>();
-    }
     private boolean isDirty = false;
 
     JComboBox<String> modeBox = new JComboBox<>();
@@ -211,13 +131,16 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
     ConnectionConfig ccCurrent = null;
 
+    protected JmrixConfigPane() {
+    }
+
     /**
      * Use "instance" to get one of these. That allows it to reconnect to
      * existing information in an existing ConnectionConfig object. It's
      * permitted to call this with a null argument, e.g. for when first
      * configuring the system.
      */
-    private JmrixConfigPane(ConnectionConfig original) {
+    protected JmrixConfigPane(ConnectionConfig original) {
 
         ConnectionConfigManager manager = InstanceManager.getDefault(ConnectionConfigManager.class);
         ccCurrent = original;
@@ -266,14 +189,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                         }
                     } else {
                         Class<?> cl = Class.forName(className);
-                        config = (ConnectionConfig) cl.newInstance();
-                        modeBox.addItem(config.name());
+                        config = (ConnectionConfig) cl.getDeclaredConstructor().newInstance();
+                        if( !(config instanceof StreamConnectionConfig)) {
+                           // only include if the connection is not a 
+                           // StreamConnection.  Those connections require
+                           // additional context.
+                           modeBox.addItem(config.name());
+                        } else {
+                               continue;
+                        }
                     }
                     classConnectionList[n++] = config;
                 } catch (NullPointerException e) {
                     log.error("Attempt to load {} failed.", className, e);
-                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-                    log.debug("Attempt to load {} failed: {}.", className, e);
+                } catch (InvocationTargetException | ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
+                    log.error("Attempt to load {} failed: {}.", className, e);
                 }
             }
             if ((modeBox.getSelectedIndex() == 0) && (p.getComboBoxLastSelection((String) manuBox.getSelectedItem()) != null)) {
@@ -283,7 +213,7 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         modeBox.addActionListener((ActionEvent a) -> {
             if ((String) modeBox.getSelectedItem() != null) {
                 if (!((String) modeBox.getSelectedItem()).equals(NONE_SELECTED)) {
-                    p.addComboBoxLastSelection((String) manuBox.getSelectedItem(), (String) modeBox.getSelectedItem());
+                    p.setComboBoxLastSelection((String) manuBox.getSelectedItem(), (String) modeBox.getSelectedItem());
                 }
             }
             selection();
@@ -327,13 +257,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                 try {
                     jmri.jmrix.ConnectionConfig config;
                     Class<?> cl = Class.forName(classConnectionNameList1);
-                    config = (jmri.jmrix.ConnectionConfig) cl.newInstance();
-                    modeBox.addItem(config.name());
+                    config = (jmri.jmrix.ConnectionConfig) cl.getDeclaredConstructor().newInstance();
+                    if( !(config instanceof StreamConnectionConfig)) {
+                        // only include if the connection is not a 
+                        // StreamConnection.  Those connections require
+                        // additional context.
+                        modeBox.addItem(config.name());
+                    } else {
+                        continue;
+                    }
                     classConnectionList[n++] = config;
                     if (classConnectionNameList.length == 1) {
                         modeBox.setSelectedIndex(1);
                     }
-                } catch (NullPointerException | ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                } catch (InvocationTargetException | NullPointerException | ClassNotFoundException 
+                                | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
                     log.warn("Attempt to load {} failed: {}", classConnectionNameList1, e);
                 }
             }
@@ -358,8 +296,8 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                 ccCurrent.dispose();
             }
             ccCurrent = classConnectionList[current];
-            classConnectionList[current].loadDetails(details);
-            classConnectionList[current].setManufacturer((String) manuBox.getSelectedItem());
+            ccCurrent.setManufacturer((String) manuBox.getSelectedItem());
+            ccCurrent.loadDetails(details);
         } else {
             if (ccCurrent != null) {
                 ccCurrent.dispose();
